<resources>
  <string name="app_name">ShoeStore</string>

  <!-- Login -->
  <string name="login_title">Login</string>
  <string name="login_label_email">Enter your email address:</string>
  <string name="login_placeholder_edit_text_email">email@youremail.com</string>
  <string name="login_label_password">Enter your password:</string>
  <string name="login_placeholder_password">******</string>
  <string name="login_button_log_in">Login</string>
  <string name="login_button_create_account">Create Account</string>

  <!-- Welcome -->
  <string name="welcome_title">Welcome</string>
  <string name="welcome_description">This is our shoe store</string>
  <string name="welcome_go_to_instructions_button_text">Go to instructions</string>

  <!-- Instructions -->
  <string name="instructions_title">Instructions</string>
  <string name="instructions_description">Here goes the text that explains how to buy shoes</string>
  <string name="instructions_button">Start Shopping</string>

  <!-- Shoe List -->
  <string name="shoe_list_title">Shoe List</string>
  <string name="shoe_item">Name: %s \n Brand: %s \n Size: %s \n Description: %s</string>

  <!-- Shoe Detail -->
  <string name="shoe_detail_title">Shoe Detail</string>
  <string name="shoe_name_label">Shoe Name</string>
  <string name="shoe_company_label">Company</string>
  <string name="shoe_size_label">Shoe Size</string>
  <string name="shoe_description_label">Description</string>

  <!-- Others -->
  <string name="logout_button">Log Out</string>
  <string name="cancel_button">Cancel</string>
  <string name="save_button">Save</string>

</resources>
