<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <!-- In here also a linear layout was chosen because elements
     are aligned one under the other in a simple way -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_label_email"
            android:paddingTop="@dimen/items_padding_top"/>

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_placeholder_edit_text_email"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/login_placeholder_edit_text_email" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_label_password"
            android:paddingTop="@dimen/items_padding_top" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_placeholder_password"
            android:autofillHints="@string/login_placeholder_password" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/button_margin_top"
            android:text="@string/login_button_log_in" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/button_margin_top"
            android:text="@string/login_button_create_account" />

    </LinearLayout>

</layout>
