<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ShoeDetailFragment">

  <!-- Here the layout chosen was a LinearLayout because the view
        is relatively simple and just has items one below the other-->

  <data>
    <variable
        name="viewModel"
        type="com.udacity.shoestore.shoeDetail.ShoeDetailViewModel" />
  </data>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="@dimen/layout_padding"
      android:orientation="vertical">

    <TextView
        android:id="@+id/detail_shoe_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shoe_name_label"
        android:paddingTop="@dimen/items_padding_top"/>

    <EditText
        android:id="@+id/detail_shoe_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shoe_name_label"
        android:text="@={viewModel.name}"
        android:inputType="text"
        android:autofillHints="@string/shoe_name_label"
        android:lines="1"/>

    <TextView
        android:id="@+id/detail_shoe_company_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shoe_company_label"
        android:paddingTop="@dimen/items_padding_top"/>

    <EditText
        android:id="@+id/detail_shoe_company_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shoe_company_label"
        android:text="@={viewModel.company}"
        android:inputType="text"
        android:autofillHints="@string/shoe_company_label"
        android:lines="1"/>

    <TextView
        android:id="@+id/detail_shoe_size_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shoe_size_label"
        android:paddingTop="@dimen/items_padding_top"/>

    <EditText
        android:id="@+id/detail_shoe_size_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shoe_size_label"
        android:autofillHints="@string/shoe_size_label"
        android:text="@={`` + viewModel.size}"
        android:lines="1"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/detail_shoe_description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shoe_description_label"
        android:paddingTop="@dimen/items_padding_top" />

    <EditText
        android:id="@+id/detail_shoe_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shoe_description_label"
        android:text="@={viewModel.description}"
        android:inputType="text"
        android:autofillHints="@string/shoe_description_label"
        android:lines="1" />

    <Button
      android:id="@+id/save_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginVertical="@dimen/button_margin_top"
      android:text="@string/save_button"/>

    <Button
      android:id="@+id/cancel_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginVertical="@dimen/button_margin_top"
      android:text="@string/cancel_button"/>

  </LinearLayout>

</layout>
