<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".WelcomeFragment">

    <!-- Here the layout chosen was a LinearLayout because the view
        is relatively simple and just has 3 items one below the other-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Title"
            android:text="@string/welcome_title"
            android:paddingTop="@dimen/items_padding_top" />

        <TextView
          android:id="@+id/welcome_description"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/welcome_description"
          android:paddingTop="@dimen/items_padding_top" />

        <Button
          android:id="@+id/instructions_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginVertical="@dimen/button_margin_top"
          android:text="@string/welcome_go_to_instructions_button_text" />

    </LinearLayout>

</layout>
